<resources>
    <string name="app_name">Mueckenfang</string>
    <string name="hello_world">Willkommen beim Mückenfang</string>
    <string name="start_button">Start</string>
    <string name="todo">TODO</string>
    <string name="game_over">Game Over</string>
    <string name="highscore">Highscore</string>
    <string name="speichern">Speichern</string>
    <string name="new_highscore">Neuer Highscore! Gib Deinen Namen ein!</string>
    <string name="highscores">Highscores</string>
</resources>