<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical" android:id="@+id/wurzel"
    android:layout_height="match_parent" tools:context=".MueckenfangActivity"
    android:background="@drawable/hintergrund">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="24sp"
        android:textIsSelectable="true"
        android:textColor="#ffff0560"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/muecke"
        android:padding="20dp" />

    <Spinner
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:id="@+id/schwierigkeitsgrad"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:id="@+id/button_to_start_the_game"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/highscore"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff8cff5b" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/highscore_number"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffc7ff0c"
        android:layout_marginBottom="20dp" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/namenseingabe"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_highscore"
            android:id="@+id/textView3"
            android:textColor="#fffff302"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:id="@+id/spielername_MainXml" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speichern"
            android:id="@+id/speichern_button" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/highscores"
        android:id="@+id/textView4"
        android:textColor="#ffffd903" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/listView"
        android:layout_weight="1"
        android:cacheColorHint="#00000000" />

</LinearLayout>





<!-- Alt: Vor Kapitel 7.3
<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollView"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/highscores"
                android:id="@+id/textView4"
                android:textColor="#ffffd903" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:textColor="#ffffff"
                android:id="@+id/highscores" />
        </LinearLayout>
    </ScrollView>
-->






<!--

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/wurzel"
    android:layout_height="match_parent" tools:context=".MueckenfangActivity"
    android:background="@drawable/hintergrund">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="24sp"
        android:textIsSelectable="true"
        android:textColor="#ffff0560"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/muecke"
        android:padding="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />
</LinearLayout>


-->



    <!--    ALT   u n d   FALSCH!
    <?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:context=".MueckenfangActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/hintergrund"
            android:contentDescription="@string/todo2" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_button" />

    </LinearLayout>

    -->